--- a/examples/server-side-rendering/package.json
+++ b/examples/server-side-rendering/package.json
@@ -5,28 +5,58 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server/main.js",
-    "build": "NODE_ENV=production yarn build:webpack && yarn build:lib",
-    "build:webpack": "webpack",
-    "build:lib": "babel -d lib src",
-    "start": "NODE_ENV=production node lib/server/main.js"
+    "build:web": "cross-env NODE_PATH=. react-app-rewired build",
+    "build:server": "cross-env NODE_PATH=./ cross-env NODE_ENV=production cross-env DIR=server backpack build",
+    "start": "DEBUG=express:* node build-server/main.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/node": "^7.0.0",
+    "@babel/plugin-syntax-async-generators": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
     "mini-css-extract-plugin": "^0.4.4",
     "nodemon": "^1.18.5",
-    "webpack": "^4.24.0",
+    "webpack": "4.19.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "^7.2.0",
+    "@loadable/babel-plugin": "^5.0.1",
+    "@loadable/component": "^5.2.1",
+    "@loadable/server": "^5.2.0",
+    "@loadable/webpack-plugin": "^5.2.1",
+    "babel-plugin-import-graphql": "^2.6.2",
+    "babel-plugin-styled-components": "^1.9.2",
+    "backpack-core": "^0.8.3",
+    "common-tags": "^1.8.0",
+    "cross-env": "^5.2.0",
+    "customize-cra": "^0.2.7",
+    "debug": "^4.1.0",
     "express": "^4.16.4",
     "express-async-handler": "^1.1.4",
+    "graphql": "^0.13.2",
+    "history": "4.6.1",
     "moment": "^2.22.2",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0"
-  }
+    "react": "16.6.3",
+    "react-app-rewire-styled-components": "^3.0.2",
+    "react-app-rewired": "^1.6.2",
+    "react-dom": "^16.6.3",
+    "react-router": "4.4.0-beta.6",
+    "react-router-dom": "4.4.0-beta.6",
+    "react-scripts": "^2.1.1",
+    "styled-components": "^4.1.2",
+    "ts-loader": "^5.3.1",
+    "typescript": "^3.2.1"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
